@@ -1,3 +1,4 @@
+import JPMSPlugin.autoImport.modulePath
 import sbt._
 import sbt.Keys._
 import sbt.internal.util.ManagedLogger
@@ -94,6 +95,9 @@ object NativeImage {
     initializeAtRuntime: Seq[String]         = Seq.empty,
     initializeAtBuildtime: Seq[String]       = defaultBuildTimeInitClasses,
     mainClass: Option[String]                = None,
+    mainModule: Option[String]               = None,
+    modulePath: Seq[String]                  = Seq.empty,
+    addModules: Seq[String]                  = Seq.empty,
     verbose: Boolean                         = false
   ): Def.Initialize[Task[Unit]] = Def
     .task {
@@ -193,6 +197,15 @@ object NativeImage {
       val cpStr  = fullCp.mkString(File.pathSeparator)
       log.debug("Class-path: " + cpStr)
 
+      val mp = if (modulePath.nonEmpty) {
+        Seq("--module-path", modulePath.mkString(File.pathSeparator))
+      } else {
+        Seq()
+      }
+      val addModulesOpt =
+        if (addModules.nonEmpty) Seq("--add-modules", addModules.mkString(","))
+        else Seq.empty
+
       val isCi       = sys.env.contains("CI")
       val verboseOpt = if (verbose || isCi) Seq("--verbose") else Seq()
       val excludeConfigsOpt =
@@ -211,6 +224,8 @@ object NativeImage {
 
       var args: Seq[String] =
         excludeConfigsOpt ++
+        mp ++
+        addModulesOpt ++
         Seq("-cp", cpStr) ++
         staticParameters ++
         configs ++
@@ -226,15 +241,14 @@ object NativeImage {
         compilationTimeoutOpt ++
         Seq("-o", targetLoc.toString)
 
-      args = mainClass match {
-        case Some(main) =>
-          args ++
-          Seq(main)
-        case None =>
-          val pathToJAR =
-            (assembly / assemblyOutputPath).value.toPath.toAbsolutePath.normalize
-          args ++
-          Seq("-jar", pathToJAR.toString)
+      val pathToJAR =
+        (assembly / assemblyOutputPath).value.toPath.toAbsolutePath.normalize
+      if (mainModule.isDefined && mainClass.isDefined) {
+        args ++= Seq("--module", mainModule.get + "/" + mainClass.get)
+      } else if (mainClass.isDefined) {
+        args ++= Seq(mainClass.get)
+      } else {
+        args ++= Seq("-jar", pathToJAR.toString)
       }
 
       val targetDirValue = (Compile / target).value
